--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 mail_settings.py
-models.pkl
-2Home_data.xlsx
+
 .DS_Store
-TH_0105_0906.xlsx
 __pycache__/
-update_trains.xlsx
-update_trains1.xlsx
+models/
+logs/
+LP29/
+
 *.log
 *.pkl
 *.h5
+*.xlsx
