--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 absl-py==1.4.0
+appdirs==1.4.4
 APScheduler==3.6.3
 astunparse==1.6.3
+beautifulsoup4==4.12.2
+bs4==0.0.1
 cachetools==4.2.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+cssselect==1.2.0
 et-xmlfile==1.1.0
+fake-useragent==1.1.3
 flatbuffers==23.5.26
 gast==0.4.0
 google-auth==2.20.0
@@ -13,10 +18,12 @@ google-pasta==0.2.0
 grpcio==1.54.2
 h5py==3.8.0
 idna==3.4
+importlib-metadata==6.6.0
 jax==0.4.12
 joblib==1.2.0
 keras==2.12.0
 libclang==16.0.0
+lxml==4.9.2
 Markdown==3.4.3
 MarkupSafe==2.1.3
 ml-dtypes==0.2.0
@@ -26,19 +33,26 @@ openpyxl==3.1.2
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.2
+parse==1.19.0
 protobuf==4.23.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyee==8.2.2
+pyppeteer==1.0.2
+pyquery==2.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-telegram-bot==13.14
 pytz==2023.3
 requests==2.31.0
+requests-html==0.10.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
+soupsieve==2.4.1
+tabulate==0.9.0
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
 tensorflow==2.12.0
@@ -47,9 +61,13 @@ tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.3.0
 threadpoolctl==3.1.0
 tornado==6.1
+tqdm==4.65.0
 typing_extensions==4.6.3
 tzdata==2023.3
 tzlocal==5.0.1
 urllib3==1.26.16
+w3lib==2.1.1
+websockets==10.4
 Werkzeug==2.3.6
 wrapt==1.14.1
+zipp==3.15.0
