--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,26 @@ absl-py==1.4.0
 appdirs==1.4.4
 APScheduler==3.6.3
 astunparse==1.6.3
+attrs==23.1.0
 beautifulsoup4==4.12.2
+branca==0.6.0
 bs4==0.0.1
 cachetools==4.2.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
 cssselect==1.2.0
+deap==1.3.3
 et-xmlfile==1.1.0
 fake-useragent==1.1.3
+Fiona==1.9.4.post1
 flatbuffers==23.5.26
+folium==0.14.0
 gast==0.4.0
+genetic-algorithm==1.0.0
+geopandas==0.13.2
 google-auth==2.20.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
@@ -19,9 +29,13 @@ grpcio==1.54.2
 h5py==3.8.0
 idna==3.4
 importlib-metadata==6.6.0
+install==1.3.5
 jax==0.4.12
+Jinja2==3.1.2
 joblib==1.2.0
 keras==2.12.0
+keras-tuner==1.3.5
+kt-legacy==1.0.5
 libclang==16.0.0
 lxml==4.9.2
 Markdown==3.4.3
@@ -39,6 +53,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pyee==8.2.2
 pyppeteer==1.0.2
+pyproj==3.6.0
 pyquery==2.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -50,6 +65,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.2.2
 scipy==1.10.1
+shapely==2.0.1
 six==1.16.0
 soupsieve==2.4.1
 tabulate==0.9.0
